# noise-cpp

./: .clang-tidy  .gitignore  README.md  cpp-client.cpp  dump_tests.py  easywsclient.hpp  meson.build  meson_options.txt  noise.cpp  noise.h  python-server.py
examples/: Noise_NN_25519_ChaChaPoly_Blake2b.cpp  Noise_XX_25519_ChaChaPoly_Blake2b.cpp  Noise_XX_25519_ChaChaPoly_Blake2b_debug.cpp  enet-client.cpp
test-clients/cpp/enet/: enet-client.cpp
test-clients/cpp/websockets/: ws-client.cpp
test-servers/python/enet/: enet-server.py
test-servers/python/websockets/: ws-server.py
test/rust-server/: Cargo.toml
test/rust-server/src/: main.rs
tests/runner/: chex.h  choc_Files.h  choc_FloatToString.h  choc_JSON.h  choc_StringUtilities.h  choc_Value.h  test_runner.cpp
tests/vectors/: Noise_I1K1_25519_AESGCM_BLAKE2b_1.json  Noise_I1K1_25519_AESGCM_BLAKE2b_2.json  Noise_I1K1_25519_AESGCM_BLAKE2s_1.json  Noise_I1K1_25519_AESGCM_BLAKE2s_2.json  Noise_I1K1_25519_AESGCM_SHA256_1.json  Noise_I1K1_25519_AESGCM_SHA256_2.json  Noise_I1K1_25519_AESGCM_SHA512_1.json  Noise_I1K1_25519_AESGCM_SHA512_2.json  Noise_I1K1_25519_ChaChaPoly_BLAKE2b_1.json  Noise_I1K1_25519_ChaChaPoly_BLAKE2b_2.json  Noise_I1K1_25519_ChaChaPoly_BLAKE2s_1.json  Noise_I1K1_25519_ChaChaPoly_BLAKE2s_2.json  Noise_I1K1_25519_ChaChaPoly_SHA256_1.json  Noise_I1K1_25519_ChaChaPoly_SHA256_2.json  Noise_I1K1_25519_ChaChaPoly_SHA512_1.json  Noise_I1K1_25519_ChaChaPoly_SHA512_2.json  Noise_I1K1_448_AESGCM_BLAKE2b_1.json  Noise_I1K1_448_AESGCM_BLAKE2s_1.json  Noise_I1K1_448_AESGCM_SHA256_1.json  Noise_I1K1_448_AESGCM_SHA512_1.json  Noise_I1K1_448_ChaChaPoly_BLAKE2b_1.json  Noise_I1K1_448_ChaChaPoly_BLAKE2s_1.json  Noise_I1K1_448_ChaChaPoly_SHA256_1.json  Noise_I1K1_448_ChaChaPoly_SHA512_1.json  Noise_I1K_25519_AESGCM_BLAKE2b_1.json  Noise_I1K_25519_AESGCM_BLAKE2b_2.json  Noise_I1K_25519_AESGCM_BLAKE2s_1.json  Noise_I1K_25519_AESGCM_BLAKE2s_2.json  Noise_I1K_25519_AESGCM_SHA256_1.json  Noise_I1K_25519_AESGCM_SHA256_2.json  Noise_I1K_25519_AESGCM_SHA512_1.json  Noise_I1K_25519_AESGCM_SHA512_2.json  Noise_I1K_25519_ChaChaPoly_BLAKE2b_1.json  Noise_I1K_25519_ChaChaPoly_BLAKE2b_2.json  Noise_I1K_25519_ChaChaPoly_BLAKE2s_1.json  Noise_I1K_25519_ChaChaPoly_BLAKE2s_2.json  Noise_I1K_25519_ChaChaPoly_SHA256_1.json  Noise_I1K_25519_ChaChaPoly_SHA256_2.json  Noise_I1K_25519_ChaChaPoly_SHA512_1.json  Noise_I1K_25519_ChaChaPoly_SHA512_2.json  (+1313 more)
